--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!-- Bootstrap CDN -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
+<script type="text/javascript" src="main.js"></script>
+<link rel="stylesheet" href="main.css">
 <section>
   <div id="hacker-list">
     <div class="form-inline">
