--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- Bootstrap CDN -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/list.js/2.3.1/list.min.js"></script>
-<script type="text/javascript" src="main.js"></script>
+
+
 <link rel="stylesheet" href="main.css">
 <section>
   <div id="hacker-list">
@@ -54,4 +54,6 @@
 </section>
 
 <!-- List.js CDN -->
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/list.js/2.3.1/list.min.js"></script> -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/list.js/1.1.1/list.min.js"></script>
+<script type="text/javascript" src="main.js"></script>
