--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
 
         <!-- People Cards List -->
     <div class="row list">
-    {% for post in site.posts %}
+    {% for page in site.pages %}
       <div class="col-md-4">
         <div class="card">
           <img src="https://i.pravatar.cc/300?u=abraham" class="card-img-top" alt="Avatar">
           <div class="card-body">
-            <h5 class="card-title name">{{ post.title }}</h5>
+            <h5 class="card-title name">{{ page.title }}</h5>
                <p class="card-text city">[Read More]({{ post.url }})</p>
           </div>
         </div>
