--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         <!-- People Cards List -->
     <div class="row list">
-    {% for page in site.pages %}
+    {% for page in site.html_pages %}
   <div class="col-md-4">
     <div class="card">
       <img src="https://i.pravatar.cc/300?u={{ post.title | slugify }}" class="card-img-top" alt="Avatar">
